Update: refactoring